k8s/uat/mailpit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: mail.nisit-deeden.uat.k8s.dev # ชื่อโดเมนสำหรับเข้าดูอีเมล
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mailpit # ชื่อ Service ของ Mailpit ของคุณ (เช็คให้ชัวร์ว่าชื่อนี้)
                port:
                  number: 8025
